GUI updated + GameModelTest